# gridappsd-dnp3-master

./: README.md  pyproject.toml  requirements.txt
dnp3-master/service/: gapp_send_cim_message.py  gapps_send_on_message.py  start_service.py  start_service_new.py
dnp3-master/service/config/: device_ip_port_config.json  device_ip_port_config.json.archive  mrid_object_outstation_index_dict.json  mrid_object_outstation_index_dict_receive.json  mrid_object_outstation_index_dict_send.json  new_conversion_dict_master.json  new_measurement_dict_master.json  new_model_line_dict.json
dnp3-master/service/dnp3/: master_pnnl.py
